--- a/package.json
+++ b/package.json
@@ -29,18 +29,19 @@
     "react-icons": "^5.3.0",
     "react-resizable-panels": "^2.1.2",
     "react-use": "^17.5.1",
+    "react-verification-input": "^4.1.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.6"
+    "typescript": "^5"
   }
 }
